add target=_blank to portfolio links

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <p>I create intuitive and responsive web experiences</p>
       </div>
 
-      <div class="arrow-nav">
-        <a href="#about"><i class="fas fa-chevron-down"></i></a>
+      <div class="scrolldown">
+        <a href="#about"><i class="fas fa-chevron-down" aria-hidden="true" aria-label="Navigate to about section"></i></a>
       </div>
     </div>
   </header>
@@ -129,7 +129,7 @@
 
         <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image">
-            <img src="./assets/images/work/mockups/RoboTrivia.png" alt="RoboTrivia">
+            <img src="./assets/images/work/mockups/RoboTrivia.png" alt="React Portfolio Project Piece RoboTrivia">
           </div>
           <div class="project-card">
             <h3>RoboTrivia</h3>
@@ -137,15 +137,15 @@
             <p class="sub-info">React | Sass | APIs | Firebase | HTML5</p>
    
             <ul class="work-links">
-              <li><a href="https://robo-trivia.netlify.app/" class="live">View Live</a></li>
-              <li><a href="https://github.com/RoboTriviaTwo/RoboTriviaGame" class="github">GitHub</a></li>
+              <li><a href="https://robo-trivia.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/RoboTriviaTwo/RoboTriviaGame" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
         </div> 
 
         <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/MovieFinder.png" alt="Movie Finder App">
+            <img src="./assets/images/work/mockups/MovieFinder.png" alt="Portfolio Project Piece Movie Finder">
           </div>
           <div class="project-card">
             <h3>Movie Finder</h3> 
@@ -153,15 +153,15 @@
             <p class="sub-info">JavaScript | CSS3 | RESTful API | Sass</p>
 
             <ul class="work-links">
-              <li><a href="https://movie-finder-app-p2.netlify.app/" class="live">View Live</a></li>
-              <li><a href="https://github.com/P2-Movie-App/movie-finder-app" class="github">GitHub</a></li>
+              <li><a href="https://movie-finder-app-p2.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/P2-Movie-App/movie-finder-app" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
         </div>
 
         <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/Textilee.png" alt="Movie Finder App">
+            <img src="./assets/images/work/mockups/Textilee.png" alt="Portfolio Project Piece Textilee">
           </div>
           <div class="project-card">
             <h3>Textilee</h3>
@@ -169,15 +169,15 @@
             <p class="sub-info">HTML5 | CSS3 | Sass</p>
  
             <ul class="work-links">
-              <li><a href="https://movie-finder-app-p2.netlify.app/" class="live">View Live</a></li>
-              <li><a href="https://github.com/P2-Movie-App/movie-finder-app" class="github">GitHub</a></li>
+              <li><a href="https://linda-shen-project-one.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/lindashendev/linda-shen-project-one" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
         </div>
 
         <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/MetHighlights.png" alt="Met Highlights">
+            <img src="./assets/images/work/mockups/MetHighlights.png" alt="React Portfolio Project Piece Met Highlights">
           </div>
           <div class="project-card">
             <h3>Met Highlights</h3>            
@@ -185,8 +185,8 @@
             <p class="sub-info">React | APIs | Sass | Firebase | HTML5</p>
      
             <ul class="work-links">
-              <li><a href="https://linda-shen-project-one.netlify.app/" class="live">View Live</a></li>
-              <li><a href="https://github.com/lindashendev/linda-shen-project-one" class="github">GitHub</a></li>
+              <li><a href="https://met-highlights-art.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/lindashendev/linda-shen-project-three" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
         </div>
@@ -203,10 +203,10 @@
             <p>If you have any questions about my projects or want to build something together, send me a message!</p>
             <p class="email"><a href="mailto:lindashencodes@gmail.com"> lindashencodes@gmail.com</a></p>
             <ul class="socials">
-                <li><a href="https://github.com/lindashendev" aria-hidden="true" aria-label="View Github"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/lindashendev/" aria-hidden="true" aria-label="View Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="https://codepen.io/lindashendev" aria-hidden="true" aria-label="View Codepen"><i class="fa-brands fa-codepen"></i></a></li>
-                <li><a href="https://calendly.com/lindashencodes/chat" aria-hidden="true" aria-label="View Calendly"><i class="far fa-calendar-alt"></i></a></li>
+                <li><a href="https://github.com/lindashendev" target="_blank"><i class="fab fa-github" aria-hidden="true" aria-label="View Github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/lindashendev/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true" aria-label="View Linkedin"></i></a></li>
+                <li><a href="https://codepen.io/lindashendev" target="_blank"><i class="fa-brands fa-codepen" aria-hidden="true" aria-label="View Codepen"></i></a></li>
+                <li><a href="https://calendly.com/lindashencodes/chat" target="_blank"><i class="fa-solid fa-calendar-days" aria-hidden="true" aria-label="View Calendly"></i></a></li>
             </ul>
           </div>
           <form action="https://formspree.io/f/mqknpeeo" method="post" name="contact" id="fs-form">
