fix mobile styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sen:wght@400;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Sen:wght@400;700&display=swap" rel="stylesheet"> 
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
@@ -104,12 +104,12 @@
             <p>Rest APIs</p>
           </li>
           <li>
-            <i class="devicon-git-plain" aria-hidden="true"></i>
-            <p>Git</p>
-          </li>
-          <li>
             <i class="fas fa-terminal" aria-hidden="true"></i>
             <p>Terminal</p>
+          </li>
+          <li>
+            <i class="devicon-git-plain" aria-hidden="true"></i>
+            <p>Git</p>
           </li>
           <li>
             <i class="fas fa-mobile-alt" aria-hidden="true"></i>
@@ -129,12 +129,12 @@
 
         <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image">
-            <img src="./assets/images/work/mockups/RoboTrivia.png" alt="React Portfolio Project Piece RoboTrivia">
+            <img src="./assets/images/work/mockups/RoboTrivia-new.png" alt="React Portfolio Project Piece RoboTrivia">
           </div>
           <div class="project-card">
             <h3>RoboTrivia</h3>
+            <p class="tools-used">React | Sass | APIs | Firebase | HTML5</p>
             <p class="description">An agency style group project which uses the Open Trivia DB to provide a set of trivia questions to players. Test out the game and see if you can beat the three high scores! Group programming project with Ashley Thadickal, Chris Yun and Imtiaz Rashid.</p>
-            <p class="sub-info">React | Sass | APIs | Firebase | HTML5</p>
    
             <ul class="work-links">
               <li><a href="https://robo-trivia.netlify.app/" class="live" target="_blank">View Live</a></li>
@@ -145,12 +145,12 @@
 
         <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/MovieFinder.png" alt="Portfolio Project Piece Movie Finder">
+            <img src="./assets/images/work/mockups/MovieFinder-new.png" alt="Portfolio Project Piece Movie Finder">
           </div>
           <div class="project-card">
             <h3>Movie Finder</h3> 
+            <p class="tools-used">JavaScript | CSS3 | RESTful API | Sass</p>
             <p class="description">MovieFinder is a website built in vanilla js that uses the OMDb API to generate a movie suggestion based on user input. The movie result page provided includes rating, overview, and an embedded trailer.</p>
-            <p class="sub-info">JavaScript | CSS3 | RESTful API | Sass</p>
 
             <ul class="work-links">
               <li><a href="https://movie-finder-app-p2.netlify.app/" class="live" target="_blank">View Live</a></li>
@@ -161,12 +161,12 @@
 
         <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/Textilee.png" alt="Portfolio Project Piece Textilee">
+            <img src="./assets/images/work/mockups/Textilee-new.png" alt="Portfolio Project Piece Textilee">
           </div>
           <div class="project-card">
             <h3>Textilee</h3>
+            <p class="tools-used">HTML5 | CSS3 | Sass</p>
             <p class="description">Textilee is a PSD multipage conversion based on a client brief and coded accordingly to a provided design style guide. The website is accessible and responsive across breakpoints.</p>
-            <p class="sub-info">HTML5 | CSS3 | Sass</p>
  
             <ul class="work-links">
               <li><a href="https://linda-shen-project-one.netlify.app/" class="live" target="_blank">View Live</a></li>
@@ -177,12 +177,12 @@
 
         <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/MetHighlights.png" alt="React Portfolio Project Piece Met Highlights">
+            <img src="./assets/images/work/mockups/MetHighlights-new.png" alt="React Portfolio Project Piece Met Highlights">
           </div>
           <div class="project-card">
             <h3>Met Highlights</h3>            
+            <p class="tools-used">React | APIs | Sass | Firebase | HTML5</p>
             <p class="description">Want to see artwork from the Met? With this app, you can explore art from the Metropolitan Museum of Art Open Source API. There is the option to save the your favourite artwork on the page.</p>
-            <p class="sub-info">React | APIs | Sass | Firebase | HTML5</p>
      
             <ul class="work-links">
               <li><a href="https://met-highlights-art.netlify.app/" class="live" target="_blank">View Live</a></li>
