--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;1,400&family=Mulish:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,500;1,400&family=Rubik:wght@400;500&display=swap" rel="stylesheet"> 
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=League+Spartan:wght@600&family=Red+Hat+Mono&display=swap" rel="stylesheet"> 
+
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <link rel="stylesheet" href="./styles/style.css">
@@ -25,53 +24,45 @@
       <nav>
         <a href="https://www.lindashen.dev/" class="logo">Linda Shen</a>
         <div class="menu-parent">
-
           <ul class="top-nav">
-            <li><a href="https://www.lindashen.dev/">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Toolkit</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-
           <button id="nav-icon" aria-label="Main menu" role="button" aria-expanded="false">
               <span></span>
               <span></span>
               <span></span>
           </button>
         </div>
-      <!-- dark mode toggle -->
-      <div class="dark-mode-toggle">
-        <input type="checkbox" id="toggle">
-        <label for="toggle" class="toggleLabel">
-          <i class="fas fa-moon"></i>
-          <i class="far fa-sun"></i>              
-        </label>       
-      </div>
       </nav>
 
       <div class="header-info">
-        <h1>Hello, I'm Linda.<span>A Front-End Developer.</span></h1>
-        <p>I create intuitive and responsive web experiences</p>
+        <p>Hello, my name is</p>
+        <h1>Linda Shen and I'm a front end developer</h1>
       </div>
 
       <div class="scrolldown">
-        <a href="#about"><i class="fas fa-chevron-down" aria-hidden="true" aria-label="Navigate to about section"></i></a>
+        <a href="#about"><i class="fas fa-chevron-down" aria-hidden="true" aria-label="Navigate to the about section"></i></a>
       </div>
     </div>
   </header>
 
   <main>
     <section id="about" class="about">
-      <div class="wrapper about-container" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
-        <div class="summary">
-        <h2>About me</h2>
-        <p>I’m a front-end developer with a background in graphic design. I’m a recent graduate of the Immersive Web development bootcamp at Juno and the York University/Sheridan College program with a Bachelors in Design.</p>
-        <p>My background in design allows me to be meticulous in front-end development work and delivering to tight deadlines, as well as creating accessible user experiences. I seek to create experiences that are engaging and valuable to users.</p>
-        <p>Outside of writing code, you can find me reading, taking care of plants, drinking matcha, and hiking in the summertime.</p>
-        </div>
-        <div class="image-container" >
-          <img src="./assets/images/cohort38-portraits-4_websize.jpg" alt="Profile headshot of Linda Shen">
+      <div class="wrapper">
+          <h2>About me</h2>
+          <p class="sub-text">Hi there, it's nice to meet you!</p>
+          <div class="about-container">
+            <div class="about-text">
+                <p>My name is Linda and I'm a front-end developer with a background in graphic design. I’m a recent graduate of the Immersive Web development bootcamp at Juno and the York University/Sheridan College program with a Bachelors in Design.</p>
+                <p>My background in design allows me to be meticulous in front-end development work and delivering to tight deadlines, as well as creating accessible user experiences. I seek to create experiences that are engaging and valuable to users.</p>
+                <p>Outside of writing code, you can find me reading, taking care of plants, drinking matcha, and hiking in the summertime. I'm currently learning Typescript.</p>
+            </div>
+          <div class="about-image" >
+            <img src="./assets/images/profile-image.jpg" alt="Profile headshot of Linda Shen">
+          </div>
         </div>
       </div>
     </section>
@@ -109,7 +100,7 @@
             <p>Firebase</p>
           </li>
           <li>
-            <i class="fas fa-cog" aria-hidden="true"></i>
+            <i class="fa-solid fa-gears" aria-hidden="true"></i>
             <p>Rest APIs</p>
           </li>
           <li>
@@ -122,11 +113,23 @@
           </li>
           <li>
             <i class="fas fa-mobile-alt" aria-hidden="true"></i>
-            <p>Responsive Design</p>
+            <p>Responsive <span>Design</span></p>
           </li>
           <li>
             <i class="fas fa-universal-access"aria-hidden="true"></i>
             <p>Accessibility</p>
+          </li>
+          <li>
+            <i class="fa-brands fa-figma" aria-hidden="true"></i>
+            <p>Figma</p>
+          </li>
+          <li>
+            <i class="devicon-photoshop-line" aria-hidden="true"></i>
+            <p>Photoshop</p>
+          </li>
+          <li>
+            <i class="devicon-illustrator-line" aria-hidden="true"></i>
+            <p>Illustrator</p>
           </li>
         </ul>
       </div>
@@ -135,23 +138,45 @@
     <section id="work" class="work">
       <div class="wrapper">
         <h2>Projects</h2>
-
-        <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
+        <p class="sub-text">A collection of projects I've built so far</p>
+        <div class="project-item">
           <div class="project-image">
-            <img src="./assets/images/work/mockups/RoboTrivia-new.png" alt="React Portfolio Project Piece RoboTrivia">
+            <img src="./assets/images/work/mockups/IsTheBookBetter.png" alt="React Portfolio Project Piece RoboTrivia">
+          </div>
+          <div class="project-card">
+            <h3>Is The Book Better?</h3>
+            <p class="description">A react app which takes the user input to fetch a result from the Google Books and The Movie DB API to compare which version has a higher rating.</p>
+            <p class="tools-used">Tech Stack</p>
+            <ul class="tools">
+              <li><i class="devicon-react-original"></i></li>
+              <li><i class="devicon-html5-plain"></i></li>
+              <li><i class="devicon-css3-plain"></i></li>
+              <li><i class="devicon-sass-original"></i></li>
+              <li><i class="fas fa-cog"></i></li>
+            </ul>
+
+            <ul class="work-links">
+              <li><a href="https://isthebookbetterapp.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/lindashendev/is-the-book-better" class="github" target="_blank">GitHub</a></li>
+            </ul>
+          </div>
+        </div> 
+
+        <div class="project-item project-item-alternate">
+          <div class="project-image" >
+            <img src="./assets/images/work/mockups/Robotrivia.png" alt="Portfolio Project Piece Textilee">
           </div>
           <div class="project-card">
             <h3>RoboTrivia</h3>
-            <!-- <p class="tools-used">React | Sass | APIs | Firebase | HTML5</p> -->
-            <p class="description">An agency style group project which uses the Open Trivia DB to provide a set of trivia questions to players. Test out the game and see if you can beat the three high scores! Group programming project with Ashley Thadickal, Chris Yun and Imtiaz Rashid.</p>
-   
+            <p class="description">An agency-styled app which uses the Open Trivia DB to provide a set of trivia questions from any category. An avatar is generated based on the user's name. Group programming project with Ashley Thadickal, Chris Yun and Imtiaz Rashid.</p>
+            <p class="tools-used">Tech Stack</p>
             <ul class="tools">
-              <li><i class="devicon-html5-plain"></i></li>
-              <li><i class="devicon-css3-plain"></i></li>
-              <li><i class="devicon-react-original"></i></li>
-              <li><i class="devicon-sass-original"></i></li>
-              <li><i class="devicon-firebase-plain"></i></li>
-              <li><i class="fas fa-cog"></i></li>
+              <li><i class="devicon-react-original" aria-hidden="true"></i></li>
+              <li><i class="devicon-css3-plain" aria-hidden="true"></i></li>
+              <li><i class="devicon-sass-original" aria-hidden="true"></i></li>
+              <li><i class="devicon-firebase-plain" aria-hidden="true"></i></li>
+              <li><i class="fas fa-mobile-alt" aria-hidden="true"></i></li>
+              <li><i class="fas fa-cog" aria-hidden="true"></i></li>
             </ul>
 
             <ul class="work-links">
@@ -159,47 +184,21 @@
               <li><a href="https://github.com/RoboTriviaTwo/RoboTriviaGame" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
-        </div> 
-
-        <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
-          <div class="project-image" >
-            <img src="./assets/images/work/mockups/MovieFinder-new.png" alt="Portfolio Project Piece Movie Finder">
-          </div>
-          <div class="project-card">
-            <h3>Movie Finder</h3> 
-            <p class="description">MovieFinder is a website built in vanilla js that uses the OMDb API to generate a movie suggestion based on user input. The movie result page provided includes rating, overview, and an embedded trailer.</p>
-
-            <ul class="tools">
-              <li><i class="devicon-html5-plain"></i></li>
-              <li><i class="devicon-css3-plain"></i></li>
-              <li><i class="devicon-javascript-plain"></i></li>
-              <li><i class="devicon-sass-original"></i></li>
-              <li><i class="fas fa-cog"></i></li>
-              <li><i class="fab fa-figma"></i></li>
-            </ul>
-
-            <ul class="work-links">
-              <li><a href="https://movie-finder-app-p2.netlify.app/" class="live" target="_blank">View Live</a></li>
-              <li><a href="https://github.com/P2-Movie-App/movie-finder-app" class="github" target="_blank">GitHub</a></li>
-            </ul>
-          </div>
         </div>
 
-        <div class="project-item" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
-          <div class="project-image" >
-            <img src="./assets/images/work/mockups/Textilee-new.png" alt="Portfolio Project Piece Textilee">
+        <div class="project-item">
+          <div class="project-image">
+            <img src="./assets/images/work/mockups/Textilee.png" alt="Textilee PSD Conversion">
           </div>
           <div class="project-card">
             <h3>Textilee</h3>
-            <!-- <p class="tools-used">HTML5 | CSS3 | Sass</p> -->
-            <p class="description">Textilee is a PSD multipage conversion based on a client brief and coded accordingly to a provided design style guide. The website is accessible and responsive across breakpoints.</p>
- 
+            <p class="description">A PSD multipage conversion based on a client brief and coded accordingly to a provided design style guide. The website is accessible and responsive across breakpoints.</p>
+            <p class="tools-used">Tech Stack</p>
             <ul class="tools">
-              <li><i class="devicon-html5-plain"></i></li>
-              <li><i class="devicon-css3-plain"></i></li>
-              <li><i class="devicon-sass-original"></i></li>
-              <li><i class="fas fa-mobile-alt"></i></li>
-              <li><i class="fas fa-cog"></i></li>
+              <li><i class="devicon-html5-plain" aria-hidden="true"></i></li>
+              <li><i class="devicon-css3-plain" aria-hidden="true"></i></li>
+              <li><i class="devicon-sass-original" aria-hidden="true"></i></li>
+              <li><i class="fas fa-mobile-alt" aria-hidden="true"></i></li>
             </ul>
 
             <ul class="work-links">
@@ -207,30 +206,27 @@
               <li><a href="https://github.com/lindashendev/linda-shen-project-one" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
-        </div>
+        </div> 
 
-        <div class="project-item project-item-alternate" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-quart">
+        <div class="project-item project-item-alternate">
           <div class="project-image" >
-            <img src="./assets/images/work/mockups/MetHighlights-new.png" alt="React Portfolio Project Piece Met Highlights">
+            <img src="./assets/images/work/mockups/MovieFinder.png" alt="Portfolio Project Piece Textilee">
           </div>
           <div class="project-card">
-            <h3>Met Highlights</h3>            
-            <!-- <p class="tools-used">React | APIs | Sass | Firebase | HTML5</p> -->
-            <p class="description">Want to see artwork from the Met? With this app, you can explore art from the Metropolitan Museum of Art Open Source API. There is the option to save the your favourite artwork on the page.</p>
-     
+            <h3>Movie Finder</h3>
+            <p class="description">MovieFinder is an app that utilizes the OMDb API to generate a movie suggestion based on user keyword search. The movie result provided to users includes rating, overview, and the trailer on the page. Paired programming project with Jaren Frani.</p>
+            <p class="tools-used">Tech Stack</p>
             <ul class="tools">
-              <li><i class="devicon-html5-plain"></i></li>
-              <li><i class="devicon-css3-plain"></i></li>
-              <li><i class="devicon-sass-original"></i></li>
-              <li><i class="devicon-react-original"></i></li>
-              <li><i class="devicon-firebase-plain"></i></li>
-              <li><i class="fas fa-cog"></i></li>
-              <li><i class="fab fa-figma"></i></li>
+              <li><i class="devicon-html5-plain" aria-hidden="true"></i></li>
+              <li><i class="devicon-css3-plain" aria-hidden="true"></i></li>
+              <li><i class="devicon-sass-original" aria-hidden="true"></i></li>
+              <li><i class="fas fa-mobile-alt" aria-hidden="true"></i></li>
+              <li><i class="fas fa-cog" aria-hidden="true"></i></li>
             </ul>
 
             <ul class="work-links">
-              <li><a href="https://met-highlights-art.netlify.app/" class="live" target="_blank">View Live</a></li>
-              <li><a href="https://github.com/lindashendev/linda-shen-project-three" class="github" target="_blank">GitHub</a></li>
+              <li><a href="https://movie-finder-app-p2.netlify.app/" class="live" target="_blank">View Live</a></li>
+              <li><a href="https://github.com/P2-Movie-App/movie-finder-app" class="github" target="_blank">GitHub</a></li>
             </ul>
           </div>
         </div>
@@ -244,11 +240,12 @@
         </div>
         <div class="wrapper contact-container">
           <div class="contact-info">
-            <p>If you have any questions about my projects or want to build something together, send me a message!</p>
+            <p>If you have any questions about my projects, want to build something together, send me a message!</p>
             <p class="email"><a href="mailto:lindashencodes@gmail.com"> lindashencodes@gmail.com</a></p>
             <ul class="socials">
                 <li><a href="https://github.com/lindashendev" target="_blank"><i class="fab fa-github" aria-hidden="true" aria-label="View Github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/lindashendev/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true" aria-label="View Linkedin"></i></a></li>
+                <li><a href="https://medium.com/@lindacodes" target="_blank"><i class="fa-brands fa-medium" aria-hidden="true" aria-label="View Medium"></i></a></li>
                 <li><a href="https://codepen.io/lindashendev" target="_blank"><i class="fa-brands fa-codepen" aria-hidden="true" aria-label="View Codepen"></i></a></li>
                 <li><a href="https://calendly.com/lindashencodes/chat" target="_blank"><i class="fa-solid fa-calendar-days" aria-hidden="true" aria-label="View Calendly"></i></a></li>
             </ul>
