Edit margin spacing and text size

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         </div>
       </nav>
 
-      <div class="header-info">
-        <p>Hello, my name is</p>
-        <h1>Linda Shen and I'm a front end developer</h1>
-      </div>
-
+      <div class="header-info-wrapper">
+        <div class="header-info">
+          <p>Hello, my name is</p>
+          <h1>Linda Shen and I'm a front end developer</h1>
+        </div>
+    </div>
       <div class="scrolldown">
         <a href="#about"><i class="fas fa-chevron-down" aria-hidden="true" aria-label="Navigate to the about section"></i></a>
       </div>
@@ -168,7 +169,7 @@
           </div>
           <div class="project-card">
             <h3>RoboTrivia</h3>
-            <p class="description">An agency-styled app which uses the Open Trivia DB to provide a set of trivia questions from any category. An avatar is generated based on the user's name. Group programming project with Ashley Thadickal, Chris Yun and Imtiaz Rashid.</p>
+            <p class="description">An agency-styled app which uses the Open Trivia DB to provide a set of trivia questions from any category. An avatar is generated based on the user's name. A group programming project with Ashley Thadickal, Chris Yun and Imtiaz Rashid.</p>
             <p class="tools-used">Tech Stack</p>
             <ul class="tools">
               <li><i class="devicon-react-original" aria-hidden="true"></i></li>
