--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@600&family=Mulish&family=Work+Sans:wght@600&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@600&family=Mulish&family=Work+Sans:wght@500,600&display=swap" rel="stylesheet"> 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <link rel="stylesheet" href="./styles/style.css">
@@ -39,10 +39,8 @@
 
       <div class="header-info-wrapper">
         <div class="header-info">
-
-          <h1>Linda Shen</h1>
-          <p>Front End Web Developer</p>
-
+          <h1>I'm Linda Shen, <span>Front End Developer</span></h1>
+          <p>I create accessible and responsive experiences</p>
         </div>
       </div>
       <div class="scrolldown">
@@ -56,7 +54,6 @@
       <div class="wrapper about-container">
           <div class="about-text">
               <h2>About me</h2>
-              <p class="sub-text">Hi there, it's nice to meet you!</p>
               <p>My name is Linda and I'm a front-end developer with a background in graphic design. I’m a recent graduate of the Immersive Web development bootcamp at Juno and the York University/Sheridan College program with a Bachelors in Design.</p>
               <p>My background in design allows me to be meticulous in front-end development work and delivering to tight deadlines, as well as creating accessible user experiences. I seek to create experiences that are engaging and valuable to users.</p>
               <p>Outside of writing code, you can find me reading, taking care of plants, drinking matcha, and hiking in the summertime. I'm currently learning Typescript.</p>
@@ -138,7 +135,6 @@
     <section id="work" class="work">
       <div class="wrapper">
         <h2>Projects</h2>
-        <p class="sub-text">A collection of projects I've built so far</p>
         <div class="project-item">
           <div class="project-image">
             <img src="./assets/images/work/mockups/MovieFinder.png" alt="Portfolio Project MovieFinder">
